fix: don't use deprecated Character constructor